--- a/arch/arm/configs/lenovo_defconfig
+++ b/arch/arm/configs/lenovo_defconfig
@@ -277,7 +277,7 @@ CONFIG_INPUT_EVDEV=y
 # CONFIG_KEYBOARD_ATKBD is not set
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_MTK=y
+#CONFIG_TOUCHSCREEN_MTK=y
 #CONFIG_TOUCHSCREEN_MTK_GT1151=y
 #CONFIG_GT1151_FIRMWARE="firmware1"
 #CONFIG_GT1151_CONFIG="config4"
@@ -464,15 +464,15 @@ CONFIG_LIBCRC32C=y
 CONFIG_LCM_HEIGHT="1280"
 CONFIG_LCM_WIDTH="720"
 
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5k5e2ya_mipi_raw gc2355_mipi_raw gc5005mipi_raw"
+#CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5k5e2ya_mipi_raw gc2355_mipi_raw gc5005mipi_raw"
 #CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5k5e2ya_mipi_raw s5k4e2gx_mipi_raw  hi551_mipi_raw ov9760_mipi_raw gc2355_mipi_raw hi841_mipi_raw"
 
-CONFIG_CUSTOM_KERNEL_LCM="ili9806e_txd_hd720_dsi_vdo_fwvga zaw700_ili9806e_fwvga_dsi_vdo_DJN_1504"
-CONFIG_MTK_KXTJ2_1009_NEW=y
-CONFIG_MTK_MXC400X_NEW=y
-CONFIG_MTK_EPL2182_NEW=y
-CONFIG_MTK_LENS_DW9714AF_SUPPORT=y
-CONFIG_TOUCHSCREEN_MTK_MSG2238_PIXI4_5=y
-CONFIG_TOUCHSCREEN_MTK_FT5X0X=y
-CONFIG_HCT_TP_GESTRUE=y
+CONFIG_CUSTOM_KERNEL_LCM="ili9881c_cpt50_haifei_hd"
+#CONFIG_MTK_KXTJ2_1009_NEW=y
+#CONFIG_MTK_MXC400X_NEW=y
+#CONFIG_MTK_EPL2182_NEW=y
+#CONFIG_MTK_LENS_DW9714AF_SUPPORT=y
+#CONFIG_TOUCHSCREEN_MTK_MSG2238_PIXI4_5=y
+#CONFIG_TOUCHSCREEN_MTK_FT5X0X=y
+#CONFIG_HCT_TP_GESTRUE=y
 
